5955
I think the bug is that it ever compiled.  If you make Private just plain private, it gives the message I would expect.
{code}
./a.scala:15: error: private class Private escapes its defining scope as part of type mypkg.Private[E]
   trait Public[E <: M] extends Private[E] {
                                ^
one error found
{code}
That is just as true a statement if Private is private[mypkg] as if it's private.

I've never heard of public classes with private parents.  Is this supported in the spec?
